Add complete project structure: config, models, requirements

--- a/.dvc/config
+++ b/.dvc/config
@@ -3,4 +3,4 @@
 ['remote "myremote"']
     url = webdavs://webdav.yandex.ru/disk/food-nonfood-mlops
     user = margo.aver2004@ya.ru
-    password = pigexxjatujqhxxs
+    password = inulhyeomlonetwi
