Simplify Yandex.Disk URL configuration

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,6 @@
 [core]
     remote = myremote
 ['remote "myremote"']
-    url = webdavs://webdav.yandex.ru/disk/food-nonfood-mlops
+    url = webdavs://webdav.yandex.ru/
     user = margo.aver2004@ya.ru
     password = inulhyeomlonetwi
