--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,4 @@
 [core]
     remote = myremote
 ['remote "myremote"']
-    url = webdavs://webdav.yandex.ru/
-    user = margo.aver2004@ya.ru
-    password = inulhyeomlonetwi
+    url = ../dvc_storage
