--- a/params.yaml
+++ b/params.yaml
@@ -3,10 +3,11 @@ data:
   img_width: 224
   batch_size: 32
   validation_split: 0.2
+  source: "raw" 
 
 training:
-  epochs: 5
-  learning_rate: 0.001
-  
+  epochs: 10
+  learning_rate: 0.0001
+
 model:
-  type: "simple_cnn"
+  type: mobilenet_v2
