Финальная версия: полный MLOps пайплайн с результатами экспериментов

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,55 @@
-/raw
-venv/
-venv_windows/
-env/
-ENV/
-virtualenv/
-.venv/
+# Data
+data/raw/
 data/processed/
+data/augmented/
+models/
+*.jpg
+*.png
+*.jpeg
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# MLflow
+mlruns/
+mlflow.db
+
+# DVC
+.dvc/tmp
+.dvc/cache
 /models
+/plots
